# darkbox-wm

./: .gitignore  Cargo.toml  Makefile  README.md  config.def.h
config/foot/: foot.ini
config/fuzzel/: fuzzel.ini
config/waybar/: config.jsonc  style.css
scripts/: autostart.sh  menu.sh  statusbar.sh
src/: compositor.rs  config.rs  keybindings.rs  main.rs  monitor.rs
