[package]
name = "darkbox-wm"
version = "1.0.0"
edition = "2021"
description = "Minimalistic Wayland compositor for old netbooks"

[dependencies]
smithay = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
opt-level = "s"
lto = true
strip = true